--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -254,8 +254,6 @@ footer a{
         border: none!important;
     }
     
-    /* 
-    As duas classe comentadas ja exitem na linha 58, acredito que poçam ser removidas.
     .rounded-top-penochao {
         border-top-left-radius: 0px;
         border-top-right-radius: 0px;
@@ -264,9 +262,8 @@ footer a{
     .rounded-bottom-penochao {
         border-bottom-left-radius: 0px;
         border-bottom-right-radius: 0px;
-    } 
-    */
-    
+    }
+
     .logo-mobile {
         display: flex;
         justify-content: center;
@@ -282,21 +279,20 @@ footer a{
     }
     
     #cabeca{
-    background-color:transparent;
-    border: 0;
-        
+        background-color:transparent;
+        border: 0;
     }
 
     .textTabela{
-    font-size: 15px;
+        font-size: 15px;
     }
     #tabela{
-    padding: 0;
-    margin: 0;
+        padding: 0;
+        margin: 0;
     }
 
     .mdb-color.lighten-3 {
-    background-color: #929fba !important;
+        background-color: #929fba !important;
     }
 
     /*Footer*/
@@ -306,12 +302,12 @@ footer a{
 }
 
 .botaoPublicar {
-    background: rgb(139, 164, 233);
-    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
-    background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
+    background: #1a1cdb;
+    background-image: -webkit-linear-gradient(top, #1a1cdb, #1E62D0);
+    background-image: -moz-linear-gradient(top, #1a1cdb, #1E62D0);
+    background-image: -ms-linear-gradient(top, #1a1cdb, #1E62D0);
+    background-image: -o-linear-gradient(top, #1a1cdb, #1E62D0);
+    background-image: linear-gradient(to bottom, #1a1cdb, #1E62D0);
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
@@ -330,12 +326,12 @@ footer a{
  
  .botaoPublicar:hover {
     border: solid #337FED 1px;
-    background: #1E62D0;
-    background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
-    background-image: linear-gradient(to bottom, #1E62D0, #3D94F6);
+    background: #1a1cdb;
+    background-image: -webkit-linear-gradient(top, #1E62D0, #1a1cdb);
+    background-image: -moz-linear-gradient(top, #1E62D0, #1a1cdb);
+    background-image: -ms-linear-gradient(top, #1E62D0, #1a1cdb);
+    background-image: -o-linear-gradient(top, #1E62D0, #1a1cdb);
+    background-image: linear-gradient(to bottom, #1E62D0, #1a1cdb);
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 8px;
