--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -339,3 +339,18 @@ footer a{
     -moz-border-radius: 20px;
     border-radius: 8px;
  }
+
+ .modal-backdrop {
+    z-index: -1;
+ }
+
+.teste {
+    width: 80%;
+    color: #707070;
+    text-align: start;
+    border-radius: 15px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
+    border: solid 1px #707070;
+    margin-bottom: 20px;
+    padding:5px;
+}
