--- a/v02/peNoChao/views/partials/head.ejs
+++ b/v02/peNoChao/views/partials/head.ejs
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Folhas de Estilo-->
-<link rel="stylesheet" href="../stylesheets/style2.css">
+<link rel="stylesheet" href="/stylesheets/style2.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <!-- Google Fonts -->
@@ -15,4 +15,4 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
 
-<link rel="stylesheet" href="../stylesheets/style.css">
+<link rel="stylesheet" href="/stylesheets/style.css">
