--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -46,11 +46,47 @@
                             <div>
                               <a class="btn btn-outline-primary w-100 btn-sm  my-1 botaoLogin" href="cadastro"> Cadastre-se </a>
                             </div>
-                            <div class="my-3">
-                                <a href=""> Esqueceu a conta? </a>
+                          </form>
+                            <div class="my-3" >
+                                <a href="" data-toggle="modal" data-target="#exampleModalCenter"> Esqueceu a conta? </a>
+                                <!-- Button trigger modal -->
+                                <!-- <button type="button" class="btn btn-link" style="" data-toggle="modal" data-target="#exampleModalCenter">
+                                  Esqueceu a conta?
+                                </button> -->
+
+                                <!-- Modal -->
+                                
+                                  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" >
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="exampleModalLongTitle">Digite seu endereço de email:</h5>
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                        </div>
+                                       
+                                          <form action="/forgot_password" method="POST">
+                                            <div class="modal-body">
+                                              <label for='email'>E-mail:</label>
+                                              <input type="email" class="teste" name="email" id="email">
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-dark" data-dismiss="modal">Cancelar</button>
+                                              <button type="submit" class="btn btn-primary">Enviar</button>
+                                            </div>
+                                            </div>
+                                          </form>
+                              
+                                      </div>
+                                    </div>
+                                  </div>
+                                
+                                <!-- fim modal-->
                             </div>
                             </div>
-                        </form>
+                        
+                       
                         </div>
                     </div>
                 </div>
@@ -58,6 +94,7 @@
               </div>  
             </div>
     </main>
+     
       <%- include('partials/footerLp') %> 
   </body>
 </html>
