--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -40,11 +40,11 @@
                           <label for="email" >
                             E-mail
                           </label>
-                          <input class="" type="email" id="email" name="email">
+                          <input class="" type="email" id="email" name="email" required>
                           <label for="password">
                             Senha
                           </label>
-                          <input type="password" id="password" name="password">
+                          <input type="password" id="password" name="password" required>
                           <div class="column ">
                             <div>
                              <button class="btn btn-primary w-100 botaoLogin" type="submit"> Entrar</button>
