--- a/v02/peNoChao/views/atleta.ejs
+++ b/v02/peNoChao/views/atleta.ejs
@@ -205,7 +205,7 @@
             </div>
 
             <div class="col d-flex justify-content-center">
-              <img src="/images/escudo-paysandu.png" width="60%" height="90%">
+              <img src="/images/escudo-paysandu.png" width="60vw">
             </div>
           </div>
 
@@ -229,15 +229,15 @@
           <!--Divi das fotos dos artilheiros-->
           <div class="row mt-3">
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000001.jpeg"   class="rounded-circle">
+              <img src="/images/users/00000000001.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000002.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000002.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000003.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000003.jpeg" width="50vw" class="rounded-circle">
             </div>
           </div>
 
@@ -261,15 +261,15 @@
 
           <div class="row mt-3">
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000004.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000004.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000005.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000005.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000006.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000006.jpeg" width="50vw" class="rounded-circle">
             </div>
           </div>
 
@@ -293,15 +293,15 @@
 
           <div class="row mt-3">
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000007.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000007.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000008.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000008.jpeg" width="50vw" class="rounded-circle">
             </div>
 
             <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000009.jpeg" class="rounded-circle">
+              <img src="/images/users/00000000009.jpeg" width="50vw" class="rounded-circle">
             </div>
           </div>
 
