--- a/v02/peNoChao/views/atleta.ejs
+++ b/v02/peNoChao/views/atleta.ejs
@@ -14,315 +14,9 @@
   
   <main class="container">
     <div class="row mt-3">
-
-      <!-- Início da coluna do Perfil -->
-      <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
-        <div class="row">
-            <div class="col d-flex justify-content-center">
-                <!-- Banner Profile-->
-                <div>
-                    <img class="rounded-top-penochao bg-profile" src="/images/gramado-bkg.PNG">
-                </div>
-              </div>
-        </div>
-        <div class="row">
-            <div class="col d-flex justify-content-center">
-                <!-- Foto profile -->
-                <div class="foto-perfil" style="background-image: url('/images/foto-perfil.jpg');">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-          <div class="row ">
-            <div class="col">
-                <h5 class="text-center">Caio Roberto da Silva</h5>
-                <p class="text-center">Zagueiro</p>
-                <!-- <h5 class="text-center">Estatísticas</h5> -->
-            </div>
-          </div>
-          <div class="estatisticas">
-            <h5 class="text-center">
-              <a class="btn" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                Estatísticas
-              </a>
-            </h5>
-            <div class="collapse" id="collapseExample">
-              <!-- <div class="card card-body"> -->
-                <div class="row d-flex justify-content-center">
-                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-                    <h1 class="text-center">10</h1>
-                    <p class="text-center">PARTIDAS</p>
-                  </div>
-                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-                    <h1 class="text-center">0</h1>
-                    <p class="text-center">GOLS</p>
-                  </div>
-                </div>
-                <div class="row d-flex justify-content-center">
-                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-                    <h1 class="text-center">0</h1>
-                    <p class="text-center">ASSISTÊNCIAS</p>
-                  </div>
-                  <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
-                    <h1 class="text-center">8</h1>
-                    <p class="text-center">VITÓRIAS</p>
-                  </div>
-                </div>
-                <div class="row d-flex mb-3 justify-content-center">
-                  <div class="col mx-2 my-1 py-3 border rounded-penochao">
-                    <h1 class="text-center">80%</h1>
-                    <p class="text-center">APROVEITAMENTO</p>
-                  </div>
-                </div>
-              <!-- </div> -->
-            </div>
- 
-          </div>
-        </div>
-      </div>
-      <!-- Fim da coluna do Perfil -->
-
-      <!-- Início da coluna do feed -->
-      <div class="col-sm-6 col-feed">
-        <div class="container bg-feed border border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
-          <form action="/atleta" method="POST">
-            <div class="row mx-0 my-3 rounded-penochao">
-              <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
-                  <div class="col-sm-12">
-                    <input name="descricao" type="text" class="form-control form-control-lg input-penochao-border" placeholder="Hora da resenha">                    
-                  </div>
-              </div>
-            
-              <div class="col-2 my-2 rounded-right-penochao   justify-content-center align-items-center">
-                <img class="botaoCameraPublicar m-2" src="/images/cam2Mini.PNG">
-                
-                <button type="submit" class="botaoPublicar">Publicar</button>
-              </div>
-            </div>
-          </form>
-
-          <div class="row mx-2 my-2 bg-white rounded-penochao">
-            <div class="col-12">
-              <!-- Inicio parte inferior  do time line -->
-        <div class="d-flex-in    my-3 ">
-          <div class="d-flex ">
-            <div class="d-flex ">
-              <a href="#">
-                <img src="/images/foto-perfil.jpg" class="rounded-circle" width="20px" height="20px" alt="Foto perfil"></a>
-            </div>
-
-            <div class=" d-flex-column align-items-center col-sm-6">
-              <a href="">
-                <h6 class="text-1 my-1">Caio da silva</h6>
-              </a>
-              <h6 class="text-1  ">Zagueiro</h6>
-            </div>
-
-            <div class=" ml-auto">
-              <button class="d-button" type="submit">
-                <h6 class=" text-1">Deixar de seguir </h6>
-              </button>
-            </div>
-          </div>
-
-          <!--  Inicio conteudo centro container -->
-          <div class="d-flex">
-            <a href="#"><img src="/images/gramado-bkg.PNG" class="card-img " alt="Foto Post"></a>
-          </div>
-          <!--  fim conteudo centro container -->
-          <!-- Inicio imagens para curtir pagina -->
-          <div class="d-flex ">
-            <div>
-              <button class="d-button" type="submit"> <i class="fas fa-futbol ml-3 "> </i></button>
-
-
-            </div>
-            <div class="flex-shrink-1 ml-2">
-              <h6 class=".d_text1">11</h6>
-            </div>
-            <div>
-              <button class="d-button"> <i class="far fa-comment ml-2"> </i></button>
-            </div>
-            <div class=" flex-grow-1  ml-2 ">
-              <h6 class=".d_text1">11</h6>
-            </div>
-            <div class="flex-shrink-1   ml-2 ">
-              <h6 class="text-1"> 05/04/2020 10:30</h6>
-            </div>
-          </div>
-          <!-- Fim imagens para curtir pagina -->
-          <!-- Inicio comentarios  -->
-          <div class="d-flex  ml-2  ">
-           <a href="#">
-             <img src="/images/foto-perfil.jpg" class="rounded-circle" width="30px" height="30px" alt="Foto Perfil">
-            </a> 
-            <div class="d-flex-column ">
-              <div class="d-flex-column">
-              <a href="">  <h6 class="card-text my-1 text-1">Caio da silva</h6></a>
-                <h6 class="card-text my-1 text-2 ">Zagueiro</h6>
-              </div>
-              <h6 class="  my-1"> Melhor jogado da liga  </p></h6>
-
-              <p class=" card-text text-3 my-1">05/04/2020 10:30 </p>
-            </div>
-          </div>
-
-          <!-- Fim comentarios  -->
-
-        </div>
-      </div>
-      <!-- Fim da coluna do feed -->
-
-
-            </div>
-          </div>
-      </div>
-      <!-- Fim da coluna do feed -->
-        
-      <!-- Início da coluna 3 - Resultados -->
-      <div class="col-sm-3 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao justify-content-center">
-        <div class="row mt-2 justify-content-center">
-          <h5 class="text-center">Resultado de</h5>
-        </div>
-
-        <!--Div que mostra a localização-->
-        <div class="row justify-content-center">
-          <div class="locaPlacar">
-            <img src="/images/PinLocation.png" width="7%" height="50%">&nbsp $VariavelCidade/Regiao
-          </div>
-        </div>
-
-
-        <!--Div do placar-->
-        <div class="container-fluide border mt-3 ">
-          <div class="mt-2">
-            <h5 class="text-center">Últimos Placares</h5>
-          </div>
-          <!--Divi dos escudos-->
-          <div class="row mt-3">
-            <div class="col d-flex justify-content-center">
-              <img src="/images/escudo-figueirense.png" width="60%" height="90%">
-            </div>
-
-            <div class="col d-flex justify-content-center">
-              <img src="/images/escudo-paysandu.png" width="60vw">
-            </div>
-          </div>
-
-          <!--Divi dos numeros dos placares-->
-          <div class="row mt-2">
-            <div class="col d-flex justify-content-center">
-              0
-            </div>
-            <div class="col d-flex justify-content-center">
-              2
-            </div>
-          </div>
-        </div>
-
-
-        <!--Div do grado dos jogadores destaque-->
-        <div class="container-fluide border mt-3 mb-3 px-4">
-          <div class="mt-2">
-            <h5 class="text-center">Artilheiros</h5>
-          </div>
-          <!--Divi das fotos dos artilheiros-->
-          <div class="row mt-3">
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000001.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000002.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000003.jpeg" width="50vw" class="rounded-circle">
-            </div>
-          </div>
-
-          <!--Divi dos nomes dos artilheiros-->
-          <div class="row">
-            <div class="col-sm-4 d-flex justify-content-center">
-              Marta
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Lucia
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Ronaldinho
-            </div>
-          </div>
-
-          <!--Divi das fotos das assitências-->
-          <div class="mt-4">
-            <h5 class="text-center">Assistências</h5>
-          </div>
-
-          <div class="row mt-3">
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000004.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000005.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000006.jpeg" width="50vw" class="rounded-circle">
-            </div>
-          </div>
-
-          <!--Divi dos nomes das assitências-->
-          <div class="row">
-            <div class="col-sm-4 d-flex justify-content-center">
-              Falcão
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Daniel
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Ganço
-            </div>
-          </div>
-
-          <!--Divi das fotos das ZAgas menos vazadas-->
-          <div class="mt-4">
-            <h5 class="text-center">Melhores Zagas</h5>
-          </div>
-
-          <div class="row mt-3">
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000007.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000008.jpeg" width="50vw" class="rounded-circle">
-            </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
-              <img src="/images/users/00000000009.jpeg" width="50vw" class="rounded-circle">
-            </div>
-          </div>
-
-          <!--Divi dos nomes das assitências-->
-          <div class="row">
-            <div class="col-sm-4 d-flex justify-content-center">
-              Sergio
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Thiago
-            </div>
-            <div class="col-sm-4 d-flex justify-content-center">
-              Diego
-            </div>
-          </div>
-        </div>
-
-
- 
-      </div>
-      <!-- Fim da coluna 3 - Resultados -->
+      <%- include('atletaPerfil') %>
+      <%- include('atletaFeed') %>  
+      <%- include('atletaResultados') %>  
     </div>
   </main>
 </body>
