coloquei input type file dentro img(camera) na Hora da resenha

--- a/v02/peNoChao/public/stylesheets/style2.css
+++ b/v02/peNoChao/public/stylesheets/style2.css
@@ -44,6 +44,15 @@
     font-style: italic;
     opacity: 0.5
 }
+#r {
+    display:none;
+}
+#l {
+  display:block;
+  width:60px;
+  height:43px;
+  background:url(/images/cam2Mini.PNG)
+}
 .text-2{
         
     font-size:9px;
