Publicaçoês implementadas utilizei moment para datas, feed atualiza publicações

--- a/v02/peNoChao/public/stylesheets/style2.css
+++ b/v02/peNoChao/public/stylesheets/style2.css
@@ -48,7 +48,7 @@
     display:none;
 }
 #l {
-  display:block;
+  /* display:block; */
   width:60px;
   height:43px;
   background:url(/images/cam2Mini.PNG)
