--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -88,7 +88,7 @@
                 </a>
                 <h6 class="card-text my-1 text-2 ">Zagueiro</h6>
               </div>
-              <h6 class="  my-1"><%=publication.descricao %></p>
+              <h6 class="  my-1"><%=publication.descricao %></h6>
               </h6>
 
               <p class=" card-text text-3 my-1">05/04/2020 10:30 </p>
