--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -48,7 +48,9 @@
                 <h6 class=" text-1">Deixar de seguir </h6>
               </button>
             </div>
+
           </div>
+          <div><h6 class="  my-1"><%=publication.descricao %></h6></div>
 
           <!--  Inicio conteudo centro container -->
           <div class="d-flex">
@@ -88,8 +90,8 @@
                 </a>
                 <h6 class="card-text my-1 text-2 ">Zagueiro</h6>
               </div>
-              <h6 class="  my-1"><%=publication.descricao %></h6>
-              </h6>
+              <h6 class="  my-1">comentarios do post </h6>
+              
 
               <p class=" card-text text-3 my-1">05/04/2020 10:30 </p>
             </div>
