--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -17,11 +17,12 @@
         </div>
         <div class="container">
           <div class="row ">
-            <div class="col">
+            <div class="col ">
               <!--  aqui renderiza nome do jogador logado   jogador.nome esta vindo do res.locals.jogador
                da pasta configs/auth  -->
                 <h5 class="text-center"><%= jogador.nome %></h5>
                 <p class="text-center"><%= jogador.posicaoJogador %></p>
+                <p class="text-center" ><a href="/cadastroTime">Seja um capitão</a></p>
                 <!-- <h5 class="text-center">Estatísticas</h5> -->
             </div>
           </div>
