--- a/v02/peNoChao/views/cadastroTimes.ejs
+++ b/v02/peNoChao/views/cadastroTimes.ejs
@@ -18,95 +18,34 @@
   <%- include('partials/headerCadastro') %>
 
       <main>
-        <div class="container justify-content-center area-cadastro">
+        <div class="container">
           <div class="row d-flex justify-content-center">
-            <div class="col-sm-4 col-md-12 col-lg-6 form-cadastro">
-              <h1>Cadastro</h1>
-              <div class="alinhamento">
-                <form action="/cadastro" method="POST" >
+            <div class="col-lg-9  p-0 mt-3 form-cadastro text-light text-center">
+              <h1>OLÁ CAPITÃO!</h1>
+              <!-- <h4 class="p-0">Seja muito bem vindo ao PéNoChão, a rede social dos jogadores de várzea!</h4> -->
+              <h4 class="m-3">Informe os seguintes dados para montarmos o perfil do seu time:</h4>
 
-                  <label for="email">  E-mail  </label>
-                  <input type="email" id="email" name="email" >
+              <div class="mt-3 mx-5 px-5 alinhamento">
+                <form action="/cadastroTime" method="POST" enctype="multipart/form-data">
+                  <label for="nome">  Nome do time: </label>
+                  <input type="nome" id="nome" name="nome" >
 
-                  <label for="password"> Senha </label>
-                  <input type="password"  id="password"  name="password">
+                  <label for="cep"> Cep da Sede do Time: </label>
+                  <input type="cep"  id="cep"  name="cep">
 
-                  <label for="senhaConfirmacao"> Confirmação da Senha  </label>
-                  <input type="password" id="senhaConfirmacao"  name="senhaConfirmacao">
-
-                <label for="sexo">  Sexo </label>
-                 <select name="sexo" >
-                  <option value="selecione" selected>Selecione</option> 
-                  <option value="feminino">Feminino</option>
-                  <option value="masculino">Masculino</option>
-                </select>
-
-                 <label for="dataNascimento">  Data de Nascimento </label>
-                 <input type="date" id="dataNascimento" name="dataNascimento">
-              
-                 <label for="nome">  Nome de Usuário </label>
-                 <input type="text" id="nome" name="nome"> 
-
-                 <label for="posicaoJogador"> Posição em Campo </label>
-                 <select name="posicaoJogador">
-                  <option value="selecione" selected>Selecione</option> 
-                  <option value="goleiro">Goleiro</option>
-                  <option value="zagueiro">Zagueiro</option>
-                  <option value="lateral">Lateral</option>
-                  <option value="volante">Volante</option>
-                  <option value="meioCampo">Meio Campo</option>
-                  <option value="meioAtacante">Meio Atacante</option>
-                  <option value="ponta">Ponta</option>
-                  <option value="segundoAtacante">Segundo Atacante</option>
-                  <option value="centroavante">Centroavante</option>
-                </select>
-
-                  <label for="estado" > Estado </label >
-                  <select name="estado">
-                    <option value="AC">Acre</option>
-                    <option value="AL">Alagoas</option>
-                    <option value="AP">Amapá</option>
-                    <option value="AM">Amazonas</option>
-                    <option value="BA">Bahia</option>
-                    <option value="CE">Ceará</option>
-                    <option value="DF">Distrito Federal</option>
-                    <option value="ES">Espírito Santo</option>
-                    <option value="GO">Goiás</option>
-                    <option value="MA">Maranhão</option>
-                    <option value="MT">Mato Grosso</option>
-                    <option value="MS">Mato Grosso do Sul</option>
-                    <option value="MG">Minas Gerais</option>
-                    <option value="PA">Pará</option>
-                    <option value="PB">Paraíba</option>
-                    <option value="PR">Paraná</option>
-                    <option value="PE">Pernambuco</option>
-                    <option value="PI">Piauí</option>
-                    <option value="RJ">Rio de Janeiro</option>
-                    <option value="RN">Rio Grande do Norte</option>
-                    <option value="RS">Rio Grande do Sul</option>
-                    <option value="RO">Rondônia</option>
-                    <option value="RR">Roraima</option>
-                    <option value="SC">Santa Catarina</option>
-                    <option value="SP" selected >São Paulo</option>
-                    <option value="SE">Sergipe</option>
-                    <option value="TO">Tocantins</option>
-                  </select>
-
-                  <label for="cep">Cep</label>
-                  <input type="text" id="cep" name="cep" >
-
-                  <label for="cidade">Cidade</label>
-                  <input type="text" id="cidade" name="cidade" >
-
-                  <label for="bairro">Bairro</label>
-                  <input type="text" id="bairro" name="bairro">
-
-                  <label for="telefone">Número de Telefone</label>
-                  <input type="text" id="telefone" name="telefone" >
-
-                  <input type="submit" id="btn-form"value="Entrar">
+                  <label for="logo"> Brasão do time: </label>
+                  <input type="file" name="logo" id="logo">
+                 
+                  <input class="mb-4" type="submit" id="btn-form"value="Salvar">
                 </form>
-                </div>
+              </div>
+              
+
+
+
+            </div>
+              
+              
             </div>
           </div>  
         </div>
