Correção da Model Jogadores + Link alteração perfil

--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -23,6 +23,7 @@
                 <h5 class="text-center"><%= jogador.nome %></h5>
                 <p class="text-center"><%= jogador.posicaoJogador %></p>
                 <p class="text-center" ><a href="/cadastroTime">Seja um capitão</a></p>
+                <p class="text-center" ><a href="/atualizar">Editar Perfil</a></p>
                 <!-- <h5 class="text-center">Estatísticas</h5> -->
             </div>
           </div>
