--- a/v02/peNoChao/views/partials/headerCadastro.ejs
+++ b/v02/peNoChao/views/partials/headerCadastro.ejs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-dark nav-desktop-penochao">
     <div class="container">
       <div class="col-1 px-0 voltar">
-        <a class="navbar-brand mx-0 py-0" href="/">
+        <a class="navbar-brand mx-0 py-0" href="/atleta">
           <img src="/images/voltar.png" alt="voltar" id="voltar">
         </a>
       </div>
