Atualização: adicionado função cadastro foto  , e inserido foto padrão para cadastro novo

--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <!-- Foto profile -->
-                <div class="foto-perfil" style="background-image: url('/images/foto-perfil.jpg');">
+                <div class="foto-perfil"  style="background-image: url('/images/<%=jogador.path%>');">
                 </div>
             </div>
         </div>
