--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -10,7 +10,7 @@
 <body>
 
 <!-- Header Logada-->
-<%- include('partials/headerLogada') %> 
+<%- include('partials/headerCadastro') %>
 
 <main class="conteiner   ">
       <div class="d-flex justify-content-center  col-12 " >
