--- a/v02/peNoChao/views/partials/headerCadastro.ejs
+++ b/v02/peNoChao/views/partials/headerCadastro.ejs
@@ -7,7 +7,7 @@
         </a>
       </div>
       <div class="col-10 logo-cadastro">
-        <a class="navbar-brand mx-0 py-0" href="#">
+        <a class="navbar-brand mx-0 py-0" href="/atleta">
           <img src="/images/logofinal.png" alt="Pé no Chão, a rede social da várzea!" id="imgLogo">
         </a>
       </div>
