--- a/v02/peNoChao/views/partials/headerLogada.ejs
+++ b/v02/peNoChao/views/partials/headerLogada.ejs
@@ -5,7 +5,7 @@
       <div class="container px-0">
 
         <div class="col-sm-3 px-0 logo-mobile">
-          <a class="navbar-brand mx-0 py-0" href="#">
+          <a class="navbar-brand mx-0 py-0" href="/atleta">
             <img src="/images/logofinal.png" alt="Pé no Chão, a rede social da várzea!" id="imgLogo">
           </a>
         </div>
